fixed index image width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ body {
     margin-left: 32%;
 }
 img {
+    max-width: 90%;
     height: 200px;
 }
 #map {
